// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display just parts when supplier products not required 1`] = `
<div
  className="grid-container"
>
  <div
    className="grid"
    key="partBlock"
  >
    <PartDisplayGridHeaders
      className=""
      includeActions={false}
      lockFirstColumn={false}
      showErrors={false}
      showSupplierProducts={false}
    />
    )}
  </div>
</div>
`;

exports[`should display parts and supplier parts when supplier products are required 1`] = `
<div
  className="grid-container"
>
  <div
    className="grid"
    key="partBlock"
  >
    <PartDisplayGridHeaders
      className=""
      includeActions={false}
      lockFirstColumn={true}
      showErrors={false}
      showSupplierProducts={true}
    />
    )}
  </div>
</div>
`;
